--- a/hosts.ini
+++ b/hosts.ini
@@ -3,35 +3,35 @@ ubuntu1404 docker_image=ubuntu:14.04
 ubuntu1604 docker_image=ubuntu:16.04
 ubuntu1804 docker_image=ubuntu:18.04
 
-debian6 docker_image=debian:6
+debian6 docker_image=debian/eol:squeeze
 debian7 docker_image=debian:7
+debian8 docker_image=debian:8
+debian9 docker_image=debian:9
 
 centos6 docker_image=centos:6
 centos7 docker_image=centos:7
 
-[deb]
-ubuntu1404
-ubuntu1604
-ubuntu1804
+[debian]
 debian6
 debian7
+debian8
+debian9
 
 [ubuntu]
 ubuntu1404
 ubuntu1604
 ubuntu1804
 
-[debian]
-debian6
-debian7
-
-[rpm]
-centos6
-centos7
+[deb:children]
+debian
+ubuntu
 
 [centos]
 centos6
 centos7
+
+[rpm:children]
+centos
 
 [docker:vars]
 ansible_connection = local
