show pkg instead of install to make it faster
Signed-off-by: Guo Qiao <guoqiao@gmail.com>

--- a/hosts.ini
+++ b/hosts.ini
@@ -38,7 +38,9 @@ ansible_connection = local
 ansible_python_interpreter = "python3"
 
 [deb:vars]
-pkgmgr = apt-get
+pkg_update_cmd = 'apt-get update -y -q'
+pkg_check_cmd = 'apt-cache show'
 
 [rpm:vars]
-pkgmgr = yum
+pkg_update_cmd = 'yum update -y -q'
+pkg_check_cmd = 'yum info'
