install epel-release for rpm
Signed-off-by: Guo Qiao <guoqiao@gmail.com>

--- a/hosts.ini
+++ b/hosts.ini
@@ -42,5 +42,5 @@ pkg_update_cmd = 'apt-get update -y -q'
 pkg_check_cmd = 'apt-cache show'
 
 [rpm:vars]
-pkg_update_cmd = 'yum update -y -q'
+pkg_update_cmd = 'yum update -y -q && yum install -y -q epel-release'
 pkg_check_cmd = 'yum info'
