rename: hosts.ini -> inventory.ini
Signed-off-by: Guo Qiao <guoqiao@gmail.com>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 retry_files_enabled = no
 callback_whitelist = [timer, profile_roles, profile_tasks]
-inventory = hosts.ini
+inventory = inventory.ini
 forks = 50
