--- a/inventory.ini
+++ b/inventory.ini
@@ -1,46 +1,57 @@
-[docker]
-ubuntu1404 docker_image=ubuntu:14.04
-ubuntu1604 docker_image=ubuntu:16.04
-ubuntu1804 docker_image=ubuntu:18.04
-
+[debian]
 debian6 docker_image=debian/eol:squeeze
 debian7 docker_image=debian:7
 debian8 docker_image=debian:8
 debian9 docker_image=debian:9
 
-centos6 docker_image=centos:6
-centos7 docker_image=centos:7
-
-[debian]
-debian6
-debian7
-debian8
-debian9
-
 [ubuntu]
-ubuntu1404
-ubuntu1604
-ubuntu1804
+ubuntu1404 docker_image=ubuntu:14.04
+ubuntu1604 docker_image=ubuntu:16.04
+ubuntu1804 docker_image=ubuntu:18.04
 
-[deb:children]
+[apt:children]
 debian
 ubuntu
 
+[deb:children]
+apt
+
+[apt:vars]
+pkg_update_cmd = 'apt-get update -y -q'
+pkg_check_cmd = 'apt-cache show'
+
+
 [centos]
-centos6
-centos7
+centos6 docker_image=centos:6
+centos7 docker_image=centos:7
+
+
+[fedora]
+fedora-latest docker_image=fedora:latest
+
+[yum:children]
+centos
+
+[yum:vars]
+pkg_update_cmd = 'yum update -y -q && yum install -y -q epel-release'
+pkg_check_cmd = 'yum info'
+
+[dnf:children]
+fedora
+
+[dnf:vars]
+pkg_update_cmd = 'dnf update -y -q'
+pkg_check_cmd = 'dnf info'
 
 [rpm:children]
-centos
+yum
+dnf
+
+[docker:children]
+deb
+rpm
 
 [docker:vars]
 ansible_connection = local
 ansible_python_interpreter = "python3"
 
-[deb:vars]
-pkg_update_cmd = 'apt-get update -y -q'
-pkg_check_cmd = 'apt-cache show'
-
-[rpm:vars]
-pkg_update_cmd = 'yum update -y -q && yum install -y -q epel-release'
-pkg_check_cmd = 'yum info'
