support fedora 28 and 29
Signed-off-by: Guo Qiao <guoqiao@gmail.com>

--- a/inventory.ini
+++ b/inventory.ini
@@ -27,7 +27,8 @@ centos7 docker_image=centos:7
 
 
 [fedora]
-fedora-latest docker_image=fedora:latest
+fedora28 docker_image=fedora:28
+fedora29 docker_image=fedora:29
 
 [yum:children]
 centos
